fixed person circles on mobile size

--- a/css/site.css
+++ b/css/site.css
@@ -380,7 +380,7 @@ section.bg-image.findings div.background-image {
 
 /* Top givers */
 
-.person-placeholder {
+.person-box.top-giver .person-placeholder {
     position: absolute;
     top: 10px;
     left: 40px;
@@ -390,7 +390,7 @@ section.bg-image.findings div.background-image {
     opacity: .2;
 }
 
-.person-box:hover .person-placeholder {
+.person-box.top-giver:hover .person-placeholder {
     opacity: .1;
 }
 
@@ -522,7 +522,7 @@ section.bg-image.findings div.background-image {
         animation-name: spinRight;
     }
 
-    @-ms-keyframes spinRight {
+/*    @-ms-keyframes spinRight {
         from { -ms-transform: rotate(0deg); }
         to { -ms-transform: rotate(360deg); }
     }
@@ -541,7 +541,7 @@ section.bg-image.findings div.background-image {
         to {
             transform:rotate(360deg);
         }
-    }
+    }*/
 
     .person-box.top-giver:nth-child(-5n+9) .circle:hover .circle-text,
     .person-box.top-giver:nth-child(-5n+10) .circle:hover .circle-text {
@@ -552,7 +552,7 @@ section.bg-image.findings div.background-image {
         animation-name: spinLeft;
     }
 
-    @-ms-keyframes spinLeft {
+/*    @-ms-keyframes spinLeft {
         from { -ms-transform: rotate(0deg); }
         to { -ms-transform: rotate(-360deg); }
     }
@@ -571,7 +571,7 @@ section.bg-image.findings div.background-image {
         to {
             transform:rotate(-360deg);
         }
-    }
+    }*/
 
 }
 
@@ -1045,22 +1045,8 @@ section#people .container {
 
 @media(min-width:768px) {
 
-    .person-box:not(.top-giver):nth-child(4n+1) .circle:hover .circle-text:after,
-    .person-box:not(.top-giver):nth-child(4n+2) .circle:hover .circle-text:after {
-        -webkit-box-shadow: 1px 1px 1px 0px rgba(51,51,51,0.5);
-        -moz-box-shadow: 1px 1px 1px 0px rgba(51,51,51,0.5);
-        box-shadow: 1px 1px 1px 0px rgba(51,51,51,0.5);
-    }
-
-    .person-box:not(.top-giver):nth-child(4n+3) .circle:hover .circle-text:after,
-    .person-box:not(.top-giver):nth-child(4n+4) .circle:hover .circle-text:after {
-        -webkit-box-shadow: -1px 1px 1px 0px rgba(51,51,51,0.5);
-        -moz-box-shadow: -1px 1px 1px 0px rgba(51,51,51,0.5);
-        box-shadow: -1px 1px 1px 0px rgba(51,51,51,0.5);
-    }
-
-    .person-box:not(.top-giver):nth-child(4n+1) .circle:hover .circle-text,
-    .person-box:not(.top-giver):nth-child(4n+2) .circle:hover .circle-text {
+    .person-box:nth-child(4n+1) .circle:hover .circle-text,
+    .person-box:nth-child(4n+2) .circle:hover .circle-text {
         right: -200px;
         -webkit-animation-name: spinRight;
         -moz-animation-name: spinRight;
@@ -1090,8 +1076,8 @@ section#people .container {
     }
 
     .circle-text.spin.left, 
-    .person-box:not(.top-giver):nth-child(4n+3) .circle:hover .circle-text,
-    .person-box:not(.top-giver):nth-child(4n+4) .circle:hover .circle-text {
+    .person-box:nth-child(4n+3) .circle:hover .circle-text,
+    .person-box:nth-child(4n+4) .circle:hover .circle-text {
         right: 200px;
         -webkit-animation-name: spinLeft;
         -moz-animation-name: spinLeft;
@@ -1119,6 +1105,22 @@ section#people .container {
             transform:rotate(-360deg);
         }
     }
+
+    .person-box:nth-child(4n+1) .circle:hover .circle-text:after,
+    .person-box:nth-child(4n+2) .circle:hover .circle-text:after {
+        -webkit-box-shadow: 1px 1px 1px 0px rgba(51,51,51,0.5);
+        -moz-box-shadow: 1px 1px 1px 0px rgba(51,51,51,0.5);
+        box-shadow: 1px 1px 1px 0px rgba(51,51,51,0.5);
+    }
+
+    .person-box:nth-child(4n+3) .circle:hover .circle-text:after,
+    .person-box:nth-child(4n+4) .circle:hover .circle-text:after {
+        -webkit-box-shadow: -1px 1px 1px 0px rgba(51,51,51,0.5);
+        -moz-box-shadow: -1px 1px 1px 0px rgba(51,51,51,0.5);
+        box-shadow: -1px 1px 1px 0px rgba(51,51,51,0.5);
+    }
+
+}
 
 /* Big circle colors*/
 
@@ -1257,21 +1259,21 @@ section#people .container {
 
 @media(min-width:768px) {
 
-    .person-box:not(.top-giver):nth-child(2n) .circle .details {
+    .person-box:nth-child(2n) .circle .details {
         text-align: inherit;
     }
 
-    .person-box:not(.top-giver):nth-child(2n) .circle:hover .details {
+    .person-box:nth-child(2n) .circle:hover .details {
         left: auto;
     }
 
-    .person-box:not(.top-giver):nth-child(4n+3) .circle .details,
-    .person-box:not(.top-giver):nth-child(4n+4) .circle .details {
+    .person-box:nth-child(4n+3) .circle .details,
+    .person-box:nth-child(4n+4) .circle .details {
         text-align: right;
     }
 
-    .person-box:not(.top-giver):nth-child(4n+3) .circle:hover .details,
-    .person-box:not(.top-giver):nth-child(4n+4) .circle:hover .details {
+    .person-box:nth-child(4n+3) .circle:hover .details,
+    .person-box:nth-child(4n+4) .circle:hover .details {
         left: -120px;
     }
 
@@ -1307,12 +1309,12 @@ section#people .container {
 
 @media(min-width:768px) {
 
-    .person-box:not(.top-giver):nth-child(2n) .circle .details .content ul {
+    .person-box:nth-child(2n) .circle .details .content ul {
         float: left;
     }
 
-    .person-box:not(.top-giver):nth-child(4n+3) .circle .details .content ul,
-    .person-box:not(.top-giver):nth-child(4n+4) .circle .details .content ul {
+    .person-box:nth-child(4n+3) .circle .details .content ul,
+    .person-box:nth-child(4n+4) .circle .details .content ul {
         float: right;
     } 
 }
